# easy-tree

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: test.yml
examples/: basic.rs  parallel.rs  traversal.rs
src/: lib.rs
